message popup scrollbar fixes
- fixed permanent scrollbars appearing in rare cases

--- a/_scss/_message-popup.scss
+++ b/_scss/_message-popup.scss
@@ -15,6 +15,11 @@
 }
 
 .message-popup {
+  &::-webkit-scrollbar {
+    display: none;
+    //hopefully this doesn't impact mobile in any way
+  }
+
   opacity: 0;
   overflow: scroll;
   visibility: hidden;
